<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBgLight"
    tools:context="com.example.frinor.android.quizy.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryLightText"
            android:background="@color/colorPrimary"
            android:padding="16dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question1"
                        android:textSize="14sp"
                        />

                    <RadioGroup
                        android:id="@+id/radio_group1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <RadioButton
                            android:id="@+id/answer1_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer1_1"
                            android:textSize="14sp"
                            />

                        <RadioButton
                            android:id="@+id/answer1_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer1_2"
                            android:textSize="14sp"
                            />

                        <RadioButton
                            android:id="@+id/answer1_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer1_3"
                            android:textSize="14sp"
                            />

                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question2"
                        android:textSize="14sp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/answer2_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer2_1"
                            android:textSize="14sp"
                            />

                        <CheckBox
                            android:id="@+id/answer2_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer2_2"
                            android:textSize="14sp"
                            />

                        <CheckBox
                            android:id="@+id/answer2_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer2_3"
                            android:textSize="14sp"
                            />

                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question3"
                        android:textSize="14sp"
                        />

                    <EditText
                        android:id="@+id/answer3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/question3_hint"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question4"
                        android:textSize="14sp"
                        android:id="@+id/textView" />

                    <RadioGroup
                        android:id="@+id/radio_group4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <RadioButton
                            android:id="@+id/answer4_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer4_1"
                            android:textSize="14sp"
                            />

                        <RadioButton
                            android:id="@+id/answer4_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer4_2"
                            android:textSize="14sp"
                            />

                        <RadioButton
                            android:id="@+id/answer4_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer4_3"
                            android:textSize="14sp"
                            />

                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question5"
                        android:textSize="14sp"
                        />

                    <RadioGroup
                        android:id="@+id/radio_group5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <RadioButton
                            android:id="@+id/answer5_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer5_1"
                            android:textSize="14sp"
                            />

                        <RadioButton
                            android:id="@+id/answer5_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer5_2"
                            android:textSize="14sp"
                            />

                        <RadioButton
                            android:id="@+id/answer5_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer5_3"
                            android:textSize="14sp"
                            />

                    </RadioGroup>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question6"
                        android:textSize="14sp"
                        />

                    <RadioGroup
                        android:id="@+id/radio_group6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <RadioButton
                            android:id="@+id/answer6_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer6_1"
                            android:textSize="14sp"
                            />

                        <RadioButton
                            android:id="@+id/answer6_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer6_2"
                            android:textSize="14sp"
                            />

                        <RadioButton
                            android:id="@+id/answer6_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer6_3"
                            android:textSize="14sp"
                            />

                    </RadioGroup>
                </LinearLayout>


            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >

                    <Button
                        android:id="@+id/button_reset"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:layout_marginRight="8dp"
                        android:text="@string/button_reset"
                        android:background="@color/colorLightGrey"
                        android:visibility="visible"
                        android:onClick="onReset" />

                    <Button
                        android:id="@+id/button_check_answers"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/button_done"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/colorPrimaryLightText"
                        android:onClick="onCheckAnswers" />
                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>
</ScrollView>
